@@ -65,19 +65,23 @@ public class FalconSense {
 		String fsCommand = String.format(
 				 "%s --min_idt %f --min_len %d --max_read_len %d "
 				 + "--min_ovl_len %d --min_cov %d --n_core %d "
-				 + "> %s < %s", 
+				 ,//+ "> %s < %s", 
 				 Settings.FALCONSENSE_PATH, Settings.FALCONSENSE_MIN_IDT,
 				 Settings.FALCONSENSE_MIN_LEN, Settings.FALCONSENSE_MAX_READ_LEN,
 				 Settings.FALCONSENSE_MIN_OVL_LEN, Settings.FALCONSENSE_MIN_COV,
-				 Settings.FALCONSENSE_N_CORE, falconOut, falconIn);
+				 Settings.FALCONSENSE_N_CORE);//, falconOut, falconIn);
 		// Use bin/sh because pipes will not work when called directly
-		String[] fullFsCommand = new String[] {"/bin/sh", "-c", fsCommand};
-		System.out.println(Arrays.toString(fullFsCommand));
-		Process child = Runtime.getRuntime().exec(fullFsCommand);
+		ArrayList<String> fullFsCommand = new ArrayList<>();
+		for(String s : fsCommand.split(" ")) fullFsCommand.add(s);
+		Process child = new ProcessBuilder()
+				.command(fullFsCommand)
+				.redirectInput(new File(falconIn))
+				.redirectOutput(new File(falconOut))
+				.start();
 		int p = child.waitFor();
 		if(p != 0)
 		{
-			throw new Exception("error running falconsense on " + falconIn);
+			throw new Exception("error running falconsense on " + falconIn+" "+p);
 		}
 	}
 	
@@ -95,6 +99,7 @@ public class FalconSense {
 		ArrayList<String> consensusSequences = new ArrayList<>();
 		
 		StringBuilder currentSequence = new StringBuilder("");
+		String currentName = "";
 		
 		Scanner input = new Scanner(new FileInputStream(toRead));
 		while(input.hasNext())
@@ -107,10 +112,11 @@ public class FalconSense {
 					consensusSequences.add(currentSequence.toString());
 				}
 				currentSequence = new StringBuilder("");
+				currentName = line.substring(1);
 			}
 			else
 			{
-				currentSequence.append(currentSequence);
+				currentSequence.append(line);
 			}
 		}
 		
